# scsp-hackathon-2025

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 041add29650b_add_organization_to_user.py  5c64f01d832b_cascade_delete_comments_when_post_is_.py  5e0dd496b23e_cascade_delete_vote.py  72669b26821b_update_id_to_integer_field.py  7c799d108d88_cascade_delete_comments_when_post_is_.py
backend/app/: auth.py  main.py  models.py
backend/app/routes/: comment.py  render.py  thread.py  user.py  vote.py
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: AuthProvider.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: Comment.tsx  CreatePostDialog.tsx  FilePreview.tsx  Footer.tsx  Header.tsx  LoginDialog.tsx  ModelLoader.tsx  Post.tsx  SignupDialog.tsx  app-sidebar.tsx
frontend/src/components/ui/: sidebar.tsx  sonner.tsx
frontend/src/lib/: client.ts  utils.ts
frontend/src/routes/: __root.tsx  comments.me.tsx  index.tsx  posts.$postId.tsx  posts.index.tsx  users.index.tsx  users.me.tsx
